Web Inspector: Editing Inline Styles Not Working https://bugs.webkit.org/show_bug.cgi?id=140239

Reviewed by Joseph Pecoraro.

Fix a regression introduced in r178060, where we no longer set
m_ordinal in InspectorCSSId. The original refactoring should have
passed m_ordinal. Fix this and introduce a sensible default value.

* inspector/InspectorStyleSheet.h:
(WebCore::InspectorCSSId::InspectorCSSId):


Canonical link: https://commits.webkit.org/158203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178105 268f45cc-cd09-0410-ab3c-d52691b4dbfc